--- a/App/src/main/res/layout/activity_main.xml
+++ b/App/src/main/res/layout/activity_main.xml
@@ -6,15 +6,18 @@
     tools:context=".MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
-        android:layout_gravity="center" />
+
 
     <TimePicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timePicker"
-        android:layout_gravity="left|bottom" />
+        android:layout_gravity="center_horizontal" />
+
+
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/btnSetAlarm"
+        android:text="Set Alarm"/>
 </FrameLayout>
