--- a/App/src/main/res/layout/activity_main.xml
+++ b/App/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="fill_parent"
             android:id="@+id/datePicker"
             android:gravity="center"
+            android:calendarViewShown="false"
             />
         <TimePicker
             android:layout_width="fill_parent"
@@ -25,10 +26,10 @@
             />
         <Button
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:id="@+id/btnSetAlarm"
             android:text="Set Alarm"
-            android:gravity="center"/>
+            android:layout_gravity="center"/>
         </LinearLayout>
 
 
