--- a/App/src/main/res/layout/activity_prova.xml
+++ b/App/src/main/res/layout/activity_prova.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.app.Prova"
+    tools:context="com.example.app.AlarmActivity"
     tools:ignore="MergeRootFrame" />
