--- a/App/src/main/res/menu/main.xml
+++ b/App/src/main/res/menu/main.xml
@@ -4,22 +4,16 @@
     tools:context=".MainActivity"
     android:orientation="horizontal">
 
-    <item android:id="@+id/alarms"
+    <item
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_action_alarms"
-        android:layout_gravity="left"
-    />
-    <item android:id="@+id/time"
-        android:orderInCategory="100"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_action_time"
-        android:layout_gravity="left"
-        />
-    <item android:id="@+id/action_settings"
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
+
+    <!--<item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="always" />
+        app:showAsAction="always" />-->
 
     <item android:id="@+id/action_accounts"
         android:title="Accounts"
