--- a/App/src/main/res/layout/fragment_alarms.xml
+++ b/App/src/main/res/layout/fragment_alarms.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_alarms"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="fill_parent"
@@ -25,7 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Add New Alarm" />
+            android:text="Add New Alarm"
+            android:onClick="openAddNewActivity"/>
     </LinearLayout>
 
 </RelativeLayout>
