--- a/App/src/main/res/layout/fragment_home.xml
+++ b/App/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="#faaaaa"
+
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_margin="15dp"
-            android:background="#faaaaa"
+            android:background="#66ffffff"
             android:orientation="vertical" >
 
             <TextView
@@ -29,22 +29,26 @@
                 android:gravity="center"
                 android:text="Milano"
                 android:textSize="60sp"
+                android:layout_margin="10dp"
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="Italy"
-                android:textSize="20dp" />
+                android:layout_margin="10dp"
+                android:textSize="20dp"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="30°C"
+                android:layout_margin="10dp"
                 android:textSize="20dp" />
         </LinearLayout>
 
@@ -53,8 +57,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_margin="15dp"
-            android:src="@drawable/meteoprova" />
+            android:src="@drawable/meteoprova"
+            android:layout_marginRight="15dp"
+            android:layout_alignBottom="@+id/mLlayoutBottomButtons2"
+            android:layout_toRightOf="@+id/mLlayoutBottomButtons2"
+            android:layout_alignTop="@+id/mLlayoutBottomButtons2" />
     </RelativeLayout>
 
     <TimePicker
@@ -78,7 +85,7 @@
         android:id="@+id/btnSetAlarm"
         android:text="Set Alarm"
         android:layout_gravity="center"
-        android:layout_below="@+id/datePicker"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 
