--- a/App/src/main/res/layout/fragment_alarms.xml
+++ b/App/src/main/res/layout/fragment_alarms.xml
@@ -31,6 +31,30 @@
             android:layout_weight="1"
             android:text="Add New Alarm"
             android:onClick="openAddNewActivity"/>
+
+        <TimePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timePicker"
+            android:layout_below="@+id/mLlayoutBottomButtons1"
+            android:layout_centerHorizontal="true" />
+
+        <DatePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datePicker"
+            android:layout_below="@+id/timePicker"
+            android:layout_centerHorizontal="true"
+            android:calendarViewShown="false"/>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/btnSetAlarm"
+            android:text="Set Alarm"
+            android:layout_gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
     </LinearLayout>
 
 </RelativeLayout>
