--- a/App/src/main/res/layout/activity_prova.xml
+++ b/App/src/main/res/layout/activity_prova.xml
@@ -3,5 +3,15 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.umorning.activities.AlarmActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:context="com.example.umorning.activities.AlarmRingActivity"
+    tools:ignore="MergeRootFrame">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="Alzati"
+        android:textSize="20dp" />
+
+</FrameLayout>
