--- a/App/src/main/res/layout/fragment_events.xml
+++ b/App/src/main/res/layout/fragment_events.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_events"
     android:orientation="vertical" >
 
-
-    <ListView
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        tools:listitem="@android:layout/simple_list_item_2" />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="Design Movies Screen"
+        android:textSize="20dp" />
+
 </RelativeLayout>
