--- a/App/src/main/res/layout/activity_account_manager.xml
+++ b/App/src/main/res/layout/activity_account_manager.xml
@@ -19,4 +19,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:onClick="eventbriteAuth"/>
+
+    <com.facebook.widget.LoginButton
+        android:id="@+id/authButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton"
+        android:layout_marginBottom="109dp" />
 </RelativeLayout>
