--- a/App/src/main/res/layout/activity_account_manager.xml
+++ b/App/src/main/res/layout/activity_account_manager.xml
@@ -29,4 +29,14 @@
         android:layout_alignLeft="@+id/imageButton"
         android:layout_alignStart="@+id/imageButton"
         android:layout_marginBottom="109dp" />
+
+    <TextView
+        android:id="@+id/userInfoTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:visibility="invisible"
+        />
 </RelativeLayout>
