--- a/App/src/main/res/layout/activity_add_new_alarm.xml
+++ b/App/src/main/res/layout/activity_add_new_alarm.xml
@@ -33,6 +33,50 @@
          />
     </LinearLayout>
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Title"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_below="@+id/timePicker1"
+        android:layout_alignLeft="@+id/timePicker1"
+        android:layout_alignStart="@+id/timePicker1"
+        android:layout_marginTop="28dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Address"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:layout_alignStart="@+id/editText"
+        android:layout_below="@+id/editText"
+        android:layout_alignLeft="@+id/timePicker1" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="City"
+        android:ems="10"
+        android:id="@+id/editText3"
+        android:layout_alignStart="@+id/editText2"
+        android:layout_below="@+id/editText2"
+        android:layout_alignLeft="@+id/timePicker1" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Country"
+        android:ems="10"
+        android:id="@+id/editText4"
+        android:layout_alignStart="@+id/editText3"
+        android:layout_below="@+id/editText3"
+        android:layout_alignLeft="@+id/timePicker1" />
 
 
 </RelativeLayout>
