--- a/App/src/main/res/drawable-xxhdpi/background_alarms.xml
+++ b/App/src/main/res/drawable-xxhdpi/background_alarms.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item><shape>
-        <gradient android:angle="0" android:endColor="#66FFCC" android:startColor="#CCFF99" android:type="linear" />
+        <gradient android:angle="0"
+            android:endColor="#66FFCC"
+            android:startColor="#CCFF99"
+            android:type="linear" />
     </shape></item>
 
 </selector>
