--- a/App/src/main/res/menu/main.xml
+++ b/App/src/main/res/menu/main.xml
@@ -8,7 +8,8 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"
+        android:onClick="startSettingsManager"/>
 
 
 
@@ -17,8 +18,5 @@
         android:orderInCategory="100"
         app:showAsAction="always"
         android:onClick="startAccountManager"/>
-
-
-
 
 </menu>
