--- a/App/src/main/res/layout/fragment_alarms.xml
+++ b/App/src/main/res/layout/fragment_alarms.xml
@@ -13,6 +13,7 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below=""
         android:layout_above="@+id/footer">
     </ListView>
 
