--- a/App/src/main/res/layout/activity_account_manager.xml
+++ b/App/src/main/res/layout/activity_account_manager.xml
@@ -14,29 +14,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:background="@drawable/eventbrite_icon"
-        android:layout_alignParentTop="true"
+        android:background="@drawable/eventbrite"
+        android:onClick="eventbriteAuth"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:onClick="eventbriteAuth"/>
+        android:layout_marginBottom="41dp" />
 
     <com.facebook.widget.LoginButton
         android:id="@+id/authButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/imageButton"
         android:layout_alignLeft="@+id/imageButton"
         android:layout_alignStart="@+id/imageButton"
-        android:layout_marginBottom="109dp" />
+        android:layout_marginBottom="47dp"
+        android:gravity="center_vertical" />
 
     <TextView
-        android:id="@+id/userInfoTextView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:visibility="invisible"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/account_text"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp" />
+
 </RelativeLayout>
