--- a/App/src/main/res/layout/list_item_events.xml
+++ b/App/src/main/res/layout/list_item_events.xml
@@ -1,39 +1,60 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="5dip" >
 
-    <ImageView
-        android:id="@+id/imageView1"
+
+    <LinearLayout android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="3dip"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_launcher" />
+        android:layout_marginRight="5dip">
+
+        <ImageView
+            android:id="@+id/list_image"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:src="@drawable/alarm_icon"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/eventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="23dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/imageView1"
-        android:text="CodeLearn Chapter 1"
-        android:textSize="16sp" />
+        android:text="11:45"
+        android:typeface="sans"
+        android:textSize="35dip"
+        android:textStyle="bold"
+        android:textColor="#10bcc9"
+        android:layout_above="@+id/alarmTitle"
+        android:layout_toRightOf="@+id/thumbnail" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/alarmTitle"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView1"
-        android:layout_alignLeft="@+id/textView1"
-        android:text="Description" />
+        android:textSize="10dip"
+        android:text="nome evento"
+        android:textColor="#10bcc9"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignLeft="@+id/eventName"
+        android:layout_alignStart="@+id/eventName" />
 
-    <ImageView
-        android:id="@+id/imageView2"
+    <ImageButton
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:id="@+id/button"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_launcher" />
+        android:layout_toLeftOf="@+id/switch1"
+        android:focusable="false"
+        android:src="@drawable/ic_action_new"
+        android:layout_alignRight="@+id/alarmTitle"
+        android:layout_alignEnd="@+id/alarmTitle"
+        android:focusableInTouchMode="false"/>
 
 </RelativeLayout>
