--- a/App/src/main/res/layout/activity_add_new_alarm.xml
+++ b/App/src/main/res/layout/activity_add_new_alarm.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:onClick="saveAlarm"
+        android:onClick="onSavePressed"
         android:text="Save"
 
          />
@@ -37,46 +37,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Title"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/event_name"
         android:layout_below="@+id/timePicker1"
-        android:layout_alignLeft="@+id/timePicker1"
-        android:layout_alignStart="@+id/timePicker1"
-        android:layout_marginTop="28dp" />
+        android:layout_marginTop="28dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/mLlayoutBottomButtons3"
+        android:layout_alignEnd="@+id/mLlayoutBottomButtons3"
+        android:hint="Name" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Address"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/timePicker1" />
+        android:id="@+id/address"
+        android:layout_below="@+id/event_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/event_name"
+        android:layout_alignEnd="@+id/event_name"
+        android:hint="Address" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="City"
         android:ems="10"
-        android:id="@+id/editText3"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_below="@+id/editText2"
-        android:layout_alignLeft="@+id/timePicker1" />
+        android:id="@+id/city"
+        android:layout_below="@+id/address"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/address"
+        android:layout_alignEnd="@+id/address"
+        android:hint="City" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Country"
         android:ems="10"
-        android:id="@+id/editText4"
-        android:layout_alignStart="@+id/editText3"
-        android:layout_below="@+id/editText3"
-        android:layout_alignLeft="@+id/timePicker1" />
+        android:id="@+id/country"
+        android:layout_below="@+id/city"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/city"
+        android:layout_alignEnd="@+id/city"
+        android:hint="Country" />
 
 
 </RelativeLayout>
