--- a/App/src/main/res/layout/fragment_events.xml
+++ b/App/src/main/res/layout/fragment_events.xml
@@ -8,7 +8,8 @@
     <ListView
         android:id="@+id/listViewEvents"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:dividerHeight="5.0sp">
     </ListView>
 
 </RelativeLayout>
