--- a/App/src/main/res/layout/list_item_events.xml
+++ b/App/src/main/res/layout/list_item_events.xml
@@ -45,7 +45,7 @@
         android:layout_alignLeft="@+id/eventName"
         android:layout_alignStart="@+id/eventName" />
 
-    <ImageButton
+    <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
