--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -81,13 +81,32 @@
                         android:layout_weight="1" />
                 </LinearLayout>
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="New Button"
-                    android:id="@+id/button"
-                    android:layout_weight="2"
-                    android:onClick="addAlarm"/>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="2">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Add Alarm"
+                        android:id="@+id/button"
+                        android:layout_weight="1"
+                        android:onClick="addAlarm"/>
+
+                    <Button
+                        android:id="@+id/shareButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:layout_marginTop="0dp"
+                        android:visibility="invisible"
+                        android:layout_weight="2"
+                        android:text="Share"
+                        android:onClick="share"/>
+                </LinearLayout>
 
             </LinearLayout>
 
