--- a/App/src/main/res/drawable-xxhdpi/background_item_alarms.xml
+++ b/App/src/main/res/drawable-xxhdpi/background_item_alarms.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape>
-            <gradient android:angle="0" android:endColor="#66FFCC" android:startColor="#CCFF99" android:type="linear" />
+            <gradient android:angle="0" android:endColor="#66FFDC" android:startColor="#DCFF99" android:type="linear" />
         </shape>
     </item>
     
