--- a/App/src/main/res/layout/list_item_events.xml
+++ b/App/src/main/res/layout/list_item_events.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dip"
-    android:background="#ffffff">
+    android:background="@drawable/background_alarms">
 
 
     <LinearLayout android:id="@+id/thumbnail"
