--- a/App/src/main/res/drawable-xxhdpi/background_events.xml
+++ b/App/src/main/res/drawable-xxhdpi/background_events.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item><shape>
-        <gradient android:angle="0" android:endColor="#eeeeee" android:startColor="#eeeeee" android:type="linear" />
-    </shape></item>
+    <item>
+        <shape>
+            <gradient android:angle="0" android:endColor="#CCFF99" android:startColor="#66FFCC" android:type="linear" />
+        </shape>
+    </item>
 
 </selector>
