--- a/App/src/main/res/layout/fragment_alarms.xml
+++ b/App/src/main/res/layout/fragment_alarms.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/footer">
+        android:layout_above="@+id/footer"
+        android:dividerHeight="5.0sp">
     </ListView>
 
     <RelativeLayout
