--- a/App/src/main/res/layout/activity_event_details.xml
+++ b/App/src/main/res/layout/activity_event_details.xml
@@ -104,8 +104,8 @@
                         android:layout_marginTop="0dp"
                         android:visibility="invisible"
                         android:layout_weight="2"
-                        android:text="Share"
-                        android:onClick="share"/>
+                        android:onClick="share"
+                        android:background="@drawable/sharefb" />
                 </LinearLayout>
 
             </LinearLayout>
