--- a/App/src/main/res/drawable-xxhdpi/background_alarms.xml
+++ b/App/src/main/res/drawable-xxhdpi/background_alarms.xml
@@ -3,7 +3,8 @@
 
     <item>
         <shape>
-            <gradient android:angle="0" android:endColor="#66FFCC" android:startColor="#CCFF99" android:type="linear" />
+            <gradient android:angle="0" android:endColor="#66FFCC" android:startColor="#66FFCC" android:type="linear" />
+            <!-- <gradient android:angle="0" android:endColor="#66FFCC" android:startColor="#CCFF99" android:type="linear" /> -->
         </shape>
     </item>
     
