--- a/App/src/main/res/values/styles.xml
+++ b/App/src/main/res/values/styles.xml
@@ -3,6 +3,20 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+                <item name="android:actionBarStyle">@style/ActionBar</item>
+
     </style>
+
+    <style name="ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/background_color</item>
+        <item name="android:backgroundStacked">@color/background_color</item>
+        <item name="android:backgroundSplit">@color/background_color</item>
+    </style>
+
+    <style name="h_line">
+                <item name="android:layout_width">fill_parent</item>
+                <item name="android:layout_height">1.5dip</item>
+                <item name="android:background">#FE4445</item>
+            </style>
 
 </resources>
