--- a/App/src/main/res/layout/list_item_events.xml
+++ b/App/src/main/res/layout/list_item_events.xml
@@ -4,7 +4,8 @@
     android:layout_height="70dp"
     android:orientation="horizontal"
     android:padding="5dip"
-    android:background="#FE4445">
+    android:background="#FFFFFF">
+    <!-- android:background="#FE4445" -->
 
 
     <LinearLayout android:id="@+id/thumbnail"
@@ -32,7 +33,8 @@
         android:textColor="#333333"
         android:layout_alignTop="@+id/thumbnail"
         android:layout_above="@+id/alarmTitle"
-        android:layout_toRightOf="@+id/thumbnail" />
+        android:layout_toRightOf="@+id/thumbnail"
+        android:fontFamily="sans-serif-light"  />
 
     <TextView
         android:id="@+id/alarmTitle"
@@ -43,6 +45,7 @@
         android:textColor="#333333"
         android:layout_alignBottom="@+id/thumbnail"
         android:layout_alignLeft="@+id/eventName"
-        android:layout_alignStart="@+id/eventName" />
+        android:layout_alignStart="@+id/eventName"
+        android:fontFamily="sans-serif-light"/>
 
 </RelativeLayout>
