--- a/App/src/main/res/menu/event_details.xml
+++ b/App/src/main/res/menu/event_details.xml
@@ -6,4 +6,11 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        android:showAsAction="ifRoom"
+        android:title="Share"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider" />
 </menu>
