--- a/App/src/main/res/menu/event_details.xml
+++ b/App/src/main/res/menu/event_details.xml
@@ -1,16 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.umorning.activities.EventDetailsActivity" >
-    
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    tools:context="com.example.umorning.activities.EventDetailsActivity">
 
     <item
         android:id="@+id/menu_item_share"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:title="Share"
-        android:actionProviderClass=
-            "android.widget.ShareActionProvider" />
+        android:actionProviderClass="android.widget.ShareActionProvider" />
+
+    <item
+        android:id="@+id/fb_share"
+        android:icon="@drawable/fb_icon_share"
+        android:title="Share on Facebook"
+        android:showAsAction="always" />
+
+    <item
+        android:id="@+id/add"
+        android:icon="@drawable/ic_action_new"
+        android:title="new"
+        android:showAsAction="always" />
+
+
 </menu>
