--- a/App/src/main/res/layout/list_item_alarms.xml
+++ b/App/src/main/res/layout/list_item_alarms.xml
@@ -1,55 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
+    android:background="#EEEEEE"
     android:orientation="horizontal"
-    android:padding="5dip"
-    android:background="#eeeeee">
+    android:padding="5dip">
 
     <RelativeLayout
         android:id="@+id/left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dip"
-        android:padding="3dip" >
+        android:layout_marginRight="5dip">
 
         <ImageView
             android:id="@+id/image_alarm"
-            android:layout_width="50dip"
-            android:layout_height="50dip"
+            android:layout_width="60dip"
+            android:layout_height="60dip"
             android:src="@drawable/alarm_icon" />
+
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/right"
+    <TextView
+        android:id="@+id/alarmTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dip"
-        android:layout_toRightOf="@id/left"
-        android:padding="3dip" >
-        
-        <TextView
-            android:id="@+id/alarmTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="11:45"
-            android:typeface="sans"
-            android:textSize="35dip"
-            android:textStyle="bold"
-            android:textColor="#10bcc9" />
-        <TextView
-            android:id="@+id/alarmTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15dip"
-            android:text="nome evento o descrizione"
-            android:textColor="#10bcc9"
-            android:layout_below="@id/alarmTime"
-            android:layout_alignParentRight="true"
-            />
-    </RelativeLayout>
+        android:layout_above="@+id/alarmTitle"
+        android:layout_alignTop="@+id/left"
+        android:layout_toRightOf="@+id/left"
+        android:fontFamily="sans-serif-light"
+        android:text="11:45"
+        android:textColor="#33B5E5"
+        android:textSize="30dip"
+        android:textStyle="bold"
+        android:typeface="sans" />
 
-
+    <TextView
+        android:id="@+id/alarmTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/left"
+        android:layout_alignLeft="@+id/alarmTime"
+        android:layout_alignStart="@+id/alarmTime"
+        android:fontFamily="sans-serif-light"
+        android:text="nome evento o descrizione"
+        android:textColor="#33B5E5"
+        android:textSize="15dip" />
 
 </RelativeLayout>
