--- a/App/src/main/res/menu/event_details.xml
+++ b/App/src/main/res/menu/event_details.xml
@@ -17,8 +17,7 @@
     <item
         android:id="@+id/add"
         android:icon="@drawable/ic_action_new"
-        android:title="new"
+        android:title="Activate alarm"
         android:showAsAction="always" />
-
 
 </menu>
