--- a/App/src/main/res/layout/fragment_events.xml
+++ b/App/src/main/res/layout/fragment_events.xml
@@ -15,13 +15,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentStart="false"
-        android:layout_centerInParent="true">
-    </ProgressBar>
+        android:layout_centerInParent="true"></ProgressBar>
 
     <ListView
         android:id="@+id/listViewEvents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:dividerHeight="5.0sp"></ListView>
 
 </RelativeLayout>
