--- a/App/src/main/res/layout/fragment_home.xml
+++ b/App/src/main/res/layout/fragment_home.xml
@@ -2,16 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_home"
-    android:orientation="vertical" >
+    android:background="#F0EFF4"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <RelativeLayout
         android:id="@+id/mLlayoutBottomButtons1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/mLlayoutBottomButtons2"
@@ -20,17 +23,18 @@
             android:layout_alignParentTop="true"
             android:layout_margin="15dp"
             android:background="#66ffffff"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/locality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:layout_margin="10dp"
+                android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:text="Milano"
                 android:textSize="60sp"
-                android:layout_margin="10dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -38,32 +42,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:text="Italy"
-                android:layout_margin="10dp"
-                android:textSize="20dp"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/temperature"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:layout_margin="10dp"
+                android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:text="30°C"
-                android:layout_margin="10dp"
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/weatherIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/right"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:layout_alignBottom="@+id/mLlayoutBottomButtons2"
-            android:layout_toRightOf="@+id/mLlayoutBottomButtons2"
-            android:layout_alignTop="@+id/mLlayoutBottomButtons2" />
+            android:layout_alignParentTop="true"
+            android:layout_margin="15dp"
+            android:background="#66ffffff"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/weatherIcon"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignBottom="@+id/mLlayoutBottomButtons2"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/mLlayoutBottomButtons2"
+                android:layout_toRightOf="@+id/mLlayoutBottomButtons2" />
+        </LinearLayout>
     </RelativeLayout>
 
     <ProgressBar
@@ -72,33 +88,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="false"
         android:layout_alignParentStart="false"
-        android:layout_centerInParent="true">
-    </ProgressBar>
-
-    <TimePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timePicker"
-        android:layout_below="@+id/mLlayoutBottomButtons1"
-        android:layout_centerHorizontal="true" />
-
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
-        android:layout_below="@+id/timePicker"
-        android:layout_centerHorizontal="true"
-        android:calendarViewShown="false"/>
-
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/btnSetAlarm"
-        android:text="Set Alarm"
-        android:layout_gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-
+        android:layout_centerInParent="true"></ProgressBar>
 
 </RelativeLayout>
